@@ -5,28 +5,151 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.servicerocket</groupId>
-        <artifactId>servicerocket-oss</artifactId>
-        <version>5</version>
+        <groupId>com.servicerocket.randombits</groupId>
+        <artifactId>randombits</artifactId>
+        <version>6</version>
         <relativePath />
     </parent>
-    <groupId>org.randombits.confluence</groupId>
-    <artifactId>confluence-conveyor-plugin-project</artifactId>
+
+    <artifactId>confluence-conveyor</artifactId>
     <version>1.0.7-SNAPSHOT</version>
-    
-    <name>Confluence Conveyor Plugin - Project</name>
+
+    <name>Confluence Conveyor</name>
+    <packaging>atlassian-plugin</packaging>
     <description>Allows plugins to override XWork actions in Confluence.</description>
-    <packaging>pom</packaging>
     <url>https://bitbucket.org/servicerocket/confluence-conveyor</url>
 
-    <scm>
-        <connection>scm:git:ssh://git@bitbucket.org/servicerocket/confluence-conveyor.git</connection>
-        <developerConnection>scm:git:ssh://git@bitbucket.org/servicerocket/confluence-conveyor.git</developerConnection>
-        <url>https://bitbucket.org/servicerocket/confluence-conveyor</url>
-        <tag>HEAD</tag>
-    </scm>
+    <licenses>
+        <license>
+            <name>New BSD License</name>
+            <url>http://www.opensource.org/licenses/bsd-license.php</url>
+        </license>
+    </licenses>
+
+    <properties>
+        <package>org.randombits.confluence.conveyor</package>
+        <atlassian.plugin.key>org.randombits.confluence.conveyor</atlassian.plugin.key>
+        <project.build.sourceRootDirectory>${project.basedir}/src/main</project.build.sourceRootDirectory>
+        <platform.minVersion>5.3</platform.minVersion>
+        <platform.maxVersion>5.8.4</platform.maxVersion>
+        <randombits.test.version>1</randombits.test.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.atlassian.confluence</groupId>
+            <artifactId>confluence</artifactId>
+            <version>${confluence.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.servicerocket.randombits</groupId>
+            <artifactId>randombits-test</artifactId>
+            <version>${randombits.test.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.selenium</groupId>
+            <artifactId>atlassian-webdriver-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.confluence</groupId>
+            <artifactId>confluence-webdriver-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.upm</groupId>
+            <artifactId>atlassian-universal-plugin-manager-pageobjects</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>${project.build.sourceRootDirectory}/resources</directory>
+                <excludes>
+                    <exclude>atlassian-plugin.xml</exclude>
+                    <exclude>**/i18n.properties</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>${project.build.sourceRootDirectory}/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>atlassian-plugin.xml</include>
+                    <include>**/i18n.properties</include>
+                </includes>
+            </resource>
+        </resources>
+        <plugins>
+            <!-- Plugin to speed up builds and deploy cycles -->
+            <plugin>
+                <groupId>com.atlassian.maven.plugins</groupId>
+                <artifactId>maven-confluence-plugin</artifactId>
+                <!-- use the latest version of the SDK -->
+                <extensions>true</extensions>
+                <configuration>
+                    <jvmArgs>-Djava.awt.headless=true -Dconfluence.devmode=true -Xmx512m -XX:MaxPermSize=256m</jvmArgs>
+                    <installPlugin>true</installPlugin>
+                    <instructions>
+                        <Export-Package>
+                            org.randombits.confluence.conveyor;version="${project.version}",
+                            org.randombits.confluence.conveyor.xwork;version="${project.version}",
+                            org.randombits.confluence.conveyor.condition;version="${project.version}"
+                        </Export-Package>
+                        <Import-Package>
+                            com.atlassian.confluence.*;version="[4,6)",
+                            com.opensymphony.xwork;version="[1.0,2)",
+                            com.opensymphony.xwork.*;version="[1.0,2)",
+                            com.opensymphony.util;version="[2.2.7,3)",
+                            com.opensymphony.webwork;version="[2.1,3)",
+                            com.opensymphony.webwork.*;version="[2.1,3)",
+                            javax.servlet.*;version="[2.3,3)",
+                            org.dom4j;version="[1.4,2)",
+                            javax.xml.parsers;version="0.0.0",
+                            org.w3c.dom;version="0.0.0",
+                            org.xml.sax;version="0.0.0",
+                            org.slf4j;version="[1.5,2)",
+                            org.apache.commons.lang;version="[2.4,3)",
+                            com.atlassian.plugin.*;version="[2.4,4)",
+                            com.atlassian.plugin;version="[2.4,4)",
+                            org.springframework.beans.factory;version="[2.0,3)"
+                        </Import-Package>
+                        <Spring-Context>*;timeout:=60</Spring-Context>
+                        <CONF_COMM />
+                    </instructions>
+                    <testGroups>
+                        <testGroup>
+                            <id>conveyor-it</id>
+                            <productIds>
+                                <productId>confluence</productId>
+                            </productIds>
+                            <includes>
+                                <include>it/**/*Test.java</include>
+                            </includes>
+                        </testGroup>
+                    </testGroups>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
+        <repository>
+            <id>atlassian.mirror</id>
+            <url>https://maven.atlassian.com/repository/public</url>
+            <snapshots><enabled>false</enabled></snapshots>
+            <releases><enabled>true</enabled></releases>
+        </repository>
+        <repository>
+            <id>atlassian.contrib</id>
+            <url>https://maven.atlassian.com/contrib</url>
+            <snapshots><enabled>false</enabled></snapshots>
+            <releases><enabled>true</enabled></releases>
+        </repository>
         <repository>
             <id>sonatype-nexus-releases</id>
             <url>https://oss.sonatype.org/content/repositories/releases/</url>
@@ -37,22 +160,6 @@
                 <enabled>true</enabled>
             </releases>
         </repository>
-        <repository>
-            <id>sonatype-nexus-snapshot</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </repository>
-    </repositories>
 
-    <modules>
-        <module>parent</module>
-        <module>plugin</module>
-        <module>plugin-compat</module>
-    </modules>
+    </repositories>
 </project>
